# Solana-Car-Auction-DApp

./: Anchor.toml  package.json
app/front-end/: package-lock.json  package.json
app/front-end/public/: about.txt  index.html
app/front-end/src/: App.js  firebase.js  index.js
app/front-end/src/components/: AdminVehicleCard.jsx  AllVehicleCard.jsx  AssetVehicleCard.jsx  CreateVehicleModal.jsx  Navbar.jsx  NotificationAlert.jsx  PublicLayout.jsx  RegisterAuctionModal.jsx  Utils.jsx
app/front-end/src/idl/: vehicle_factory.json
app/front-end/src/page/: Admin.jsx  Assets.jsx  Detail.jsx  Home.jsx  Wallet.jsx
app/front-end/src/router/: PublicRoute.jsx  index.jsx
app/front-end/src/utils/: Constants.js
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.tsx  index.tsx
app/frontend/src/components/: Navbar.tsx  PublicLayout.tsx
app/frontend/src/idl/: vehicle_factory.ts
app/frontend/src/page/: Home.tsx  Wallet.tsx
app/frontend/src/router/: index.tsx
app/solana-car-auction-dapp/: package.json
app/solana-car-auction-dapp/src/components/: AdminVehicleCard.jsx  AllVehicleCard.jsx  AssetVehicleCard.jsx  CreateVehicleModal.jsx  RegisterAuctionModal.jsx  Utils.jsx
app/solana-car-auction-dapp/src/page/: Admin.jsx  Assets.jsx  Home.jsx
programs/solana-car-auction-dapp/: Cargo.toml
programs/solana-car-auction-dapp/src/: lib.rs
programs/vehicle/: Cargo.toml
programs/vehicle/src/: lib.rs
programs/vehicle_factory/: Cargo.toml
programs/vehicle_factory/src/: lib.rs
tests/: solana-car-auction-dapp.ts
(+1 files in other folders)
